# SeeNatural

./: .gitmodules  CMakeLists.txt  README.md  build.gradle
app/: build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/cpp/: OboeSinePlayer.cpp  OboeSinePlayer.h  native-lib.cpp
app/src/cpp/audio/: Callback.cpp  Callback.h  OboeSinePlayer.cpp  StreamManager.cpp  StreamManager.h
app/src/cpp/utils/: logging.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/notes/: high_a.wav.reapeaks  high_a_sharp.wav.reapeaks  high_b.wav.reapeaks  high_c.wav.reapeaks  high_c_sharp.wav.reapeaks  high_d.wav.reapeaks  high_d_sharp.wav.reapeaks  high_e.wav.reapeaks  high_f.wav.reapeaks  high_f_sharp.wav.reapeaks  high_g.wav.reapeaks  high_g_sharp.wav.reapeaks  low_a.wav.reapeaks  low_a_sharp.wav.reapeaks  low_b.wav.reapeaks  low_c.wav.reapeaks  low_c_sharp.wav.reapeaks  low_d.wav.reapeaks  low_d_sharp.wav.reapeaks  low_e.wav.reapeaks  low_f.wav.reapeaks  low_f_sharp.wav.reapeaks  low_g.wav.reapeaks  low_g_sharp.wav.reapeaks
app/src/main/res/drawable/: ic_atom_48px.xml  ic_eye_48px.xml  ic_low_48px.xml  ic_piano_black_48dp.xml  ic_top_48px.xml
app/src/main/res/layout/: activity_clef.xml  activity_difficulty.xml  activity_main.xml  activity_reading.xml  activity_sight_reading_setup.xml  content_main.xml  content_sight_reading_setup.xml  fragment_first.xml  fragment_piano.xml  fragment_piano_setup.xml  fragment_reading.xml  fragment_reading_complete.xml  fragment_reading_setup.xml  fragment_reading_tab.xml  fragment_staff.xml  fragment_theory.xml
app/src/main/res/layout-land/: activity_clef.xml  activity_difficulty.xml  activity_reading.xml
gradle/wrapper/: gradle-wrapper.properties
(+108 files in other folders)
